...
        mapType={Platform.select({
          ios: "mutedStandard",
          android: "standard",
          default: "standard",
        })}
        provider="google"
        testID="map-screen"
      >
        {renderMarkers}
        {allowedRegion && (
          <Circle
            center={{
              latitude: allowedRegion.latitude,
...
        </Animated.View>
      )}

      <TouchableOpacity
        style={styles.centerButton}
        onPress={centerOnUserLocation}
        testID="center-on-user-location-button"
      >
        <Ionicons name="locate" size={24} color="#fff" />
      </TouchableOpacity>

      <TouchableOpacity
        style={styles.drawerButton}
...

      {user && (
        <RainbowBorder>
          <TouchableOpacity
            style={styles.fab}
            onPress={() => navigation.navigate("CreateAddress")}
            testID="add-address-button"
          >
            <Ionicons name="add" size={24} color="#fff" />
          </TouchableOpacity>
        </RainbowBorder>
      )}

...
